--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ionic-native": "1.3.10",
     "ionicons": "3.0.0",
     "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "^5.0.0-beta.6",
+    "watson-developer-cloud": "^2.2.0",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
